<resources>
    <string name="app_name">Vidmoji</string>

    <string name="ime_name">Vidmoji Keyboard</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>

    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>

    <!-- Labels for subtype -->
    <string name="label_subtype_generic">%s</string>
    <string name="label_subtype_en_GB">English (GB)</string>
    <string name="label_subtype_en_russi">Russian</string>

    <!-- Titles for ImePreference -->
    <string name="settings_name">Vidmoji Keyboard Settings</string>
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login/Register -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirmpassword">Confirm Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_empty_username">Please enter the username</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="mess_instagram">(Sign up with Instagram for a Richer Experience)</string>
    <string name="action_instagram">Instagram</string>
    <string name="action_facebook">Facebook</string>
    <string name="prompt_birthday">Birthday</string>
    <string name="prompt_Terms">I Agree to Vidmoji Terms of Service</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="action_notYet">No Account Yet? Sign up</string>
    <string name="action_already_mem">Already A Member? Login</string>
    <string name="title_activity_test_login">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="select_country">Please select country</string>


    <!-- Strings related to Settings -->
    <string name="mess_buildVidmojis">You can build your Vidmoji collection by liking your favorite clips posted by @Vidmoji.</string>
    <string name="action_authIG">Authenticate Instagram</string>

    <string name="mess_add_Vidmojis">Add Vidmojis to My Library</string>
    <string name="title_activity_settings">Settings</string>
    <string name="mess_addtolib">Any time you like any of Vidmojis Instagram posts, add to my library.</string>
    <string name="devicesettings">Device Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_vidmoji_keyboard_installed">Vidmoji Keyboard Installed</string>
    <string name="txt_enable_keyboard">Enable Keyboard</string>
    <string name="txt_download_vidmojis_to">Download Vidmojis to</string>
    <string name="txt_download_only_on_wifi">Download Only On WiFi</string>
    <string name="txt_vidmojis_dwnld_when_connect_to_wifi">Vidmojis will be downloaded only when connected to WiFi</string>
    <string name="txt_upload_only_on_wifi">Upload Only On WiFi</string>
    <string name="txt_vidmojis_upload_when_connect_wifi">Vidmojis will be uploaded only when connected to WiFi</string>
    <string name="txt_for_users_who_are_data_concious">For users who are data concious</string>
    <string name="txt_suggest_vidmoji_keyboard_when_connect_wi_fi">Suggest Vidmoji\'s on keyboard only when connected to Wi-Fi</string>
    <string name="txt_delete_vidmojis">Delete Vidmojis</string>
    <string name="txt_del_vidmojis_device_dislike_audio">Delete vidmojis from device if you dislike a video/ photo/ audio</string>
    <string name="txt_save">Save</string>
    <string name="txt_log_out">Log Out</string>
    <string name="txt_refresh">REFRESH</string>
    <string name="tutorial">Tutorial</string>
    <string name="title_activity_youtube_acitivity">YoutubeAcitivity</string>

    Add Vidmojis to My Library

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->


</resources>
