<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.perfection.newkeyboard.KeyboardSettings"
    android:background="#ffffff">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <EditText
            android:id="@+id/editText2"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/action_instagram"
            android:textSize="20dp"
            android:textStyle="bold"
            android:enabled="false"
            android:textColor="#000000"
            android:background="#00000000"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textMultiLine"
            android:text="@string/mess_buildVidmojis"
            android:textColor="#808080"
            android:textSize="13dp"
            android:enabled="false"
            android:maxLines="3"
            tools:layout_editor_absoluteY="25dp"/>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="143dp"
            android:layout_height="43dp"
            android:text="@string/action_authIG"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff"
            />

            <EditText
                android:id="@+id/editText23"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/mess_add_Vidmojis"
                android:textSize="14dp"
                android:textStyle="bold"
                android:enabled="false"
                android:textColor="#000000"
                android:background="#00000000"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:backgroundTint="@android:color/transparent"
                android:inputType="textMultiLine"
                android:text="@string/mess_addtolib"
                android:textColor="#808080"
                android:textSize="13dp"
                android:enabled="false"
                android:maxLines="3"
                tools:layout_editor_absoluteY="25dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/editText222"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/devicesettings"
                android:textSize="20dp"
                android:textStyle="bold"
                android:enabled="false"
                android:textColor="#000000"
                android:background="#00000000"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText22"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/devicesettings"
                android:textSize="16dp"
                android:textStyle="bold"
                android:enabled="false"
                android:textColor="#000000"
                android:background="#00000000"
                />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/execute_Search"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="18dp"
                android:textColor="#ffffff"
                android:gravity="center_vertical"
                 />

        </LinearLayout>


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
